--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "",
+    "build": "",
+    "preview": "",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "fix": "npm run format"
   },
   "devDependencies": {
     "knip": "^5.59.1",
-    "vite": "^5.0.0"
+    "prettier": "^3.5.3"
   }
 }
