--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,5 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
-  ]
+  "routes": [{ "handle": "filesystem" }, { "src": "/.*", "dest": "/index.html" }]
 }
