--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "",
-    "build": "",
-    "preview": "",
+    "dev": "npx http-server . -p 3000",
+    "build": "npx http-server . -p 3000 --production",
+    "preview": "npx http-server . -p 3000",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "fix": "npm run format"
+    "fix": "npm run format",
+    "lint": "npx eslint ."
   },
   "devDependencies": {
     "knip": "^5.59.1",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "eslint": "^8.56.0",
+    "http-server": "^14.1.1"
   }
 }
