chore: increment APP_VER to 5.0.1 for PWA settings update, add homepage specific scripts, and remove generic image paths from cache configuration

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ vgl-b-f.MP4
 debug-images.html
 context.py
 combine.py
+Context_for_AA_Guide_quovadis-pwa_v1.md
+Context_for_AA_Guide_quovadis-pwa_v2.md
