chore: update ESLint and Prettier configurations, enhance package.json scripts, and refactor JavaScript arrow functions for consistency
- Added Node environment support in .eslintrc.json and integrated Prettier for code formatting.
- Updated package.json scripts for linting and fixing code style issues.
- Refactored JavaScript code to use consistent arrow function syntax across multiple files.
- Made minor HTML adjustments for consistency in page-Vergleich.html.

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,10 @@
   "trailingComma": "es5",
   "printWidth": 100,
   "tabWidth": 2,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "htmlWhitespaceSensitivity": "css",
+  "jsxSingleQuote": false,
+  "quoteProps": "as-needed"
 }
