--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,19 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": ["prettier"],
   "rules": {
     "no-unused-vars": "warn",
-    "no-console": "off"
+    "no-console": "warn",
+    "prettier/prettier": "error"
   },
   "globals": {
     "APP_NAME": "readonly",
