--- a/package.json
+++ b/package.json
@@ -8,13 +8,27 @@
     "preview": "npx http-server . -p 3000",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "fix": "npm run format",
-    "lint": "npx eslint ."
+    "fix": "eslint --fix . && prettier --write .",
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "knip": "^5.59.1",
     "prettier": "^3.5.3",
     "eslint": "^8.56.0",
-    "http-server": "^14.1.1"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "http-server": "^14.1.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md,html}": [
+      "prettier --write"
+    ]
   }
 }
