--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "knip": "^5.59.1",
-    "prettier": "^3.5.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.4.1",
     "http-server": "^14.1.1",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2"
+    "knip": "^5.59.1",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.5.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
