chore: add @vercel/speed-insights dependency and integrate script in index.html

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "*.{json,css,md,html}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@vercel/speed-insights": "^1.2.0"
   }
 }
