--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx http-server . -p 3006",
+    "dev": "vite",
     "build": "npx http-server . -p 3000 --production",
     "preview": "npx http-server . -p 3000",
     "format": "prettier --write .",
@@ -20,7 +20,8 @@
     "husky": "^9.0.11",
     "knip": "^5.59.1",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "vite": "^5.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
