feat: update app name and description in manifest.json for rebranding to Finley

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "version": "4.1",
   "lang": "en",
-  "name": "QuoVadis",
+  "name": "Finley",
   "scope": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "start_url": "/index.html",
-  "short_name": "QuoVadis",
-  "description": "QuoVadis - Football Training App with Smart Caching",
+  "short_name": "Finley",
+  "description": "Finley - Football Training App",
   "orientation": "portrait",
   "background_color": "#1b1d21",
   "theme_color": "#1b1d21",
