--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
     "format:check": "prettier --check .",
     "fix": "eslint --fix . && prettier --write .",
     "lint": "eslint .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.4.1",
     "http-server": "^14.1.1",
     "husky": "^9.0.11",
     "knip": "^5.59.1",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.5.3",
+    "prettier": "^3.1.0",
+    "typescript": "^5.0.0",
     "vite": "^5.0.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix"
     ],
     "*.{json,css,md,html}": [
       "prettier --write"
